Remove the overflow to prevent tab from hiding

--- a/app/assets/stylesheets/upload.css.scss
+++ b/app/assets/stylesheets/upload.css.scss
@@ -8,6 +8,22 @@
   .upload-ready &{
     height:200px;
   }
+
+}
+
+.upload-wrapper{
+  position: relative;
+  height: 160px;
+  margin-top: 20px;
+  border: 5px dashed #444;
+  h3{
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 80px;
+    margin-top: -1em;
+    font-size: 1.2em;
+  }
 }
 
 .appear-bounce{
